// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageCTA > renders with as correctly 1`] = `
"<section data-orientation="vertical" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-default ring ring-default">
  <div class="w-full max-w-(--ui-container) mx-auto flex flex-col lg:grid px-6 py-12 sm:px-12 sm:py-24 lg:px-16 lg:py-24 gap-8 sm:gap-16" data-slot="container"></div>
</section>"
`;

exports[`PageCTA > renders with body slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-default ring ring-default">
  <div class="w-full max-w-(--ui-container) mx-auto flex flex-col lg:grid px-6 py-12 sm:px-12 sm:py-24 lg:px-16 lg:py-24 gap-8 sm:gap-16" data-slot="container">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="body" class="mt-8">Body slot</div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`PageCTA > renders with bottom slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-default ring ring-default">
  <div class="w-full max-w-(--ui-container) mx-auto flex flex-col lg:grid px-6 py-12 sm:px-12 sm:py-24 lg:px-16 lg:py-24 gap-8 sm:gap-16" data-slot="container"></div>Bottom slot
</div>"
`;

exports[`PageCTA > renders with class correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate overflow-hidden bg-default ring ring-default rounded-none">
  <div class="w-full max-w-(--ui-container) mx-auto flex flex-col lg:grid px-6 py-12 sm:px-12 sm:py-24 lg:px-16 lg:py-24 gap-8 sm:gap-16" data-slot="container"></div>
</div>"
`;

exports[`PageCTA > renders with default slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-default ring ring-default">
  <div class="w-full max-w-(--ui-container) mx-auto flex flex-col lg:grid px-6 py-12 sm:px-12 sm:py-24 lg:px-16 lg:py-24 gap-8 sm:gap-16" data-slot="container">
    <!--v-if-->Default slot
  </div>
</div>"
`;

exports[`PageCTA > renders with description correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-default ring ring-default">
  <div class="w-full max-w-(--ui-container) mx-auto flex flex-col lg:grid px-6 py-12 sm:px-12 sm:py-24 lg:px-16 lg:py-24 gap-8 sm:gap-16" data-slot="container">
    <div data-slot="wrapper" class="">
      <div data-slot="header" class="">
        <!--v-if-->
        <div data-slot="description" class="text-base sm:text-lg text-center text-balance text-muted">Description</div>
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`PageCTA > renders with description slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-default ring ring-default">
  <div class="w-full max-w-(--ui-container) mx-auto flex flex-col lg:grid px-6 py-12 sm:px-12 sm:py-24 lg:px-16 lg:py-24 gap-8 sm:gap-16" data-slot="container">
    <div data-slot="wrapper" class="">
      <div data-slot="header" class="">
        <!--v-if-->
        <div data-slot="description" class="text-base sm:text-lg text-center text-balance text-muted">Description slot</div>
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`PageCTA > renders with footer slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-default ring ring-default">
  <div class="w-full max-w-(--ui-container) mx-auto flex flex-col lg:grid px-6 py-12 sm:px-12 sm:py-24 lg:px-16 lg:py-24 gap-8 sm:gap-16" data-slot="container">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
      <div data-slot="footer" class="mt-8">Footer slot</div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`PageCTA > renders with header slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-default ring ring-default">
  <div class="w-full max-w-(--ui-container) mx-auto flex flex-col lg:grid px-6 py-12 sm:px-12 sm:py-24 lg:px-16 lg:py-24 gap-8 sm:gap-16" data-slot="container">
    <div data-slot="wrapper" class="">
      <div data-slot="header" class="">Header slot</div>
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`PageCTA > renders with links correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-default ring ring-default">
  <div class="w-full max-w-(--ui-container) mx-auto flex flex-col lg:grid px-6 py-12 sm:px-12 sm:py-24 lg:px-16 lg:py-24 gap-8 sm:gap-16" data-slot="container">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
      <div data-slot="footer" class="mt-8">
        <div data-slot="links" class="flex flex-wrap gap-x-6 gap-y-3 justify-center"><button type="button" data-slot="base" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-sm gap-2 text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
            <!--v-if--><span data-slot="label" class="truncate">Get started</span>
            <!--v-if-->
          </button></div>
      </div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`PageCTA > renders with links slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-default ring ring-default">
  <div class="w-full max-w-(--ui-container) mx-auto flex flex-col lg:grid px-6 py-12 sm:px-12 sm:py-24 lg:px-16 lg:py-24 gap-8 sm:gap-16" data-slot="container">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
      <div data-slot="footer" class="mt-8">
        <div data-slot="links" class="flex flex-wrap gap-x-6 gap-y-3 justify-center">Links slot</div>
      </div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`PageCTA > renders with orientation horizontal correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-default ring ring-default">
  <div class="w-full max-w-(--ui-container) mx-auto flex flex-col lg:grid px-6 py-12 sm:px-12 sm:py-24 lg:px-16 lg:py-24 gap-8 sm:gap-16 lg:grid-cols-2 lg:items-center" data-slot="container">
    <!--v-if-->
    <div class="hidden lg:block"></div>
  </div>
</div>"
`;

exports[`PageCTA > renders with orientation horizontal links correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-default ring ring-default">
  <div class="w-full max-w-(--ui-container) mx-auto flex flex-col lg:grid px-6 py-12 sm:px-12 sm:py-24 lg:px-16 lg:py-24 gap-8 sm:gap-16 lg:grid-cols-2 lg:items-center" data-slot="container">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
      <div data-slot="footer" class="mt-8">
        <div data-slot="links" class="flex flex-wrap gap-x-6 gap-y-3"><button type="button" data-slot="base" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-sm gap-2 text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
            <!--v-if--><span data-slot="label" class="truncate">Get started</span>
            <!--v-if-->
          </button></div>
      </div>
    </div>
    <div class="hidden lg:block"></div>
  </div>
</div>"
`;

exports[`PageCTA > renders with orientation horizontal reverse correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-default ring ring-default">
  <div class="w-full max-w-(--ui-container) mx-auto flex flex-col lg:grid px-6 py-12 sm:px-12 sm:py-24 lg:px-16 lg:py-24 gap-8 sm:gap-16 lg:grid-cols-2 lg:items-center" data-slot="container">
    <!--v-if-->
    <div class="hidden lg:block"></div>
  </div>
</div>"
`;

exports[`PageCTA > renders with reverse correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-default ring ring-default">
  <div class="w-full max-w-(--ui-container) mx-auto flex flex-col lg:grid px-6 py-12 sm:px-12 sm:py-24 lg:px-16 lg:py-24 gap-8 sm:gap-16" data-slot="container"></div>
</div>"
`;

exports[`PageCTA > renders with title correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-default ring ring-default">
  <div class="w-full max-w-(--ui-container) mx-auto flex flex-col lg:grid px-6 py-12 sm:px-12 sm:py-24 lg:px-16 lg:py-24 gap-8 sm:gap-16" data-slot="container">
    <div data-slot="wrapper" class="">
      <div data-slot="header" class="">
        <h2 data-slot="title" class="text-3xl sm:text-4xl text-pretty tracking-tight font-bold text-highlighted text-center">Title</h2>
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`PageCTA > renders with title slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-default ring ring-default">
  <div class="w-full max-w-(--ui-container) mx-auto flex flex-col lg:grid px-6 py-12 sm:px-12 sm:py-24 lg:px-16 lg:py-24 gap-8 sm:gap-16" data-slot="container">
    <div data-slot="wrapper" class="">
      <div data-slot="header" class="">
        <h2 data-slot="title" class="text-3xl sm:text-4xl text-pretty tracking-tight font-bold text-highlighted text-center">Title slot</h2>
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`PageCTA > renders with top slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-default ring ring-default">Top slot<div class="w-full max-w-(--ui-container) mx-auto flex flex-col lg:grid px-6 py-12 sm:px-12 sm:py-24 lg:px-16 lg:py-24 gap-8 sm:gap-16" data-slot="container"></div>
</div>"
`;

exports[`PageCTA > renders with ui correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-default ring ring-default">
  <div class="w-full mx-auto flex flex-col lg:grid px-6 py-12 sm:px-12 sm:py-24 lg:px-16 lg:py-24 gap-8 sm:gap-16 max-w-5xl" data-slot="container"></div>
</div>"
`;

exports[`PageCTA > renders with variant naked correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate rounded-xl overflow-hidden">
  <div class="w-full max-w-(--ui-container) mx-auto flex flex-col lg:grid px-6 py-12 sm:px-12 sm:py-24 lg:px-16 lg:py-24 gap-8 sm:gap-16" data-slot="container"></div>
</div>"
`;

exports[`PageCTA > renders with variant outline correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-default ring ring-default">
  <div class="w-full max-w-(--ui-container) mx-auto flex flex-col lg:grid px-6 py-12 sm:px-12 sm:py-24 lg:px-16 lg:py-24 gap-8 sm:gap-16" data-slot="container"></div>
</div>"
`;

exports[`PageCTA > renders with variant soft correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-elevated/50">
  <div class="w-full max-w-(--ui-container) mx-auto flex flex-col lg:grid px-6 py-12 sm:px-12 sm:py-24 lg:px-16 lg:py-24 gap-8 sm:gap-16" data-slot="container"></div>
</div>"
`;

exports[`PageCTA > renders with variant solid correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-inverted text-inverted">
  <div class="w-full max-w-(--ui-container) mx-auto flex flex-col lg:grid px-6 py-12 sm:px-12 sm:py-24 lg:px-16 lg:py-24 gap-8 sm:gap-16" data-slot="container"></div>
</div>"
`;

exports[`PageCTA > renders with variant subtle correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative isolate rounded-xl overflow-hidden bg-elevated/50 ring ring-default">
  <div class="w-full max-w-(--ui-container) mx-auto flex flex-col lg:grid px-6 py-12 sm:px-12 sm:py-24 lg:px-16 lg:py-24 gap-8 sm:gap-16" data-slot="container"></div>
</div>"
`;
